--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "json-server": "^0.17.1",
     "next": "^12.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6"
+    "eslint-config-next": "13.0.6",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
