--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tabler/icons": "^1.115.0",
     "json-server": "^0.17.1",
     "next": "^12.3.4",
     "react": "^18.2.0",
