--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "axios": "^1.2.0",
     "json-server": "^0.17.1",
     "next": "^12.3.4",
     "react": "^18.2.0",
