--- a/package.json
+++ b/package.json
@@ -20,11 +20,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "eslint-config-next": "13.0.6"
   }
 }
