--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "json-server": "^0.17.1",
     "next": "^12.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
