--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.1",
-    "next": "^12.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "json-server": "0.17.1",
+    "next": "^13.0.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "concurrently": "^7.6.0",
+    "concurrently": "7.6.0",
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6"
+    "eslint-config-next": "13.0.6",
+    "prettier": "2.8.1"
   }
 }
