--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "formik": "^2.2.9",
     "json-server": "0.17.1",
     "next": "^13.0.6",
     "react": "18.2.0",
